Menambahkan td mouse

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         <th>Nama Produk</th>
         <th>Harga</th>
       </tr>
+
+      <tr>
+        <td>1</td>
+        <td>Mouse</td>
+        <td>Rp. 100.000</td>
+      </tr>
     </table>
   </body>
 </html>
