Menambahkan td keyboard

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <td>Mouse</td>
         <td>Rp. 100.000</td>
       </tr>
+      <tr>
+        <td>2</td>
+        <td>Keyboard</td>
+        <td>Rp. 200.000</td>
+      </tr>
     </table>
   </body>
 </html>
