Menambahkan td flash disk

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         <td>Keyboard</td>
         <td>Rp. 200.000</td>
       </tr>
+
+      <tr>
+        <td>3</td>
+        <td>Flash Disk</td>
+        <td>Rp. 50.000</td>
+      </tr>
     </table>
   </body>
 </html>
