Menambahkan styling table, td dan th

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Table</title>
-    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="/1124160034-Pertemuan6-Perancangan-Web/style/style.css"
+    />
   </head>
   <body>
     <table>
