--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
         <td>Flash Disk</td>
         <td>Rp. 50.000</td>
       </tr>
+      <tr>
+        <td>4</td>
+        <td>Dazumba Speaker</td>
+        <td>Rp. 300.000</td>
+      </tr>
     </table>
   </body>
 </html>
