Menambahkan td SSD

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
         <td>Dazumba Speaker</td>
         <td>Rp. 300.000</td>
       </tr>
+      <tr>
+        <td>5</td>
+        <td>SSD Samsung 980 Pro 1tb</td>
+        <td>Rp. 1.200.000</td>
+      </tr>
     </table>
   </body>
 </html>
