Menambahkan td TWS

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
         <td>SSD Samsung 980 Pro 1tb</td>
         <td>Rp. 1.200.000</td>
       </tr>
+      <tr>
+        <td>6</td>
+        <td>Moondrop TWS Nekocake</td>
+        <td>Rp. 600.000</td>
+      </tr>
     </table>
   </body>
 </html>
