Menambahkan td thermal

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
         <td>Moondrop TWS Nekocake</td>
         <td>Rp. 600.000</td>
       </tr>
+      <tr>
+        <td>7</td>
+        <td>Grizzly Kryonaut</td>
+        <td>Rp. 85.000</td>
+      </tr>
     </table>
   </body>
 </html>
