Menambahkan td thermal kingpin

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
         <td>Grizzly Kryonaut</td>
         <td>Rp. 85.000</td>
       </tr>
+      <tr>
+        <td>8</td>
+        <td>Kingpin Kpx</td>
+        <td>Rp. 85.000</td>
+      </tr>
     </table>
   </body>
 </html>
