--- a/index.html
+++ b/index.html
@@ -58,6 +58,22 @@
         <td>Kingpin Kpx</td>
         <td>Rp. 85.000</td>
       </tr>
+      <tr>
+        <td>9</td>
+        <td>SD Card</td>
+        <td>Rp. 100.000</td>
+      </tr>
+      <tr>
+        <td>10</td>
+        <td>Deskmat XXL</td>
+        <td>Rp. 150.000</td>
+      </tr>
     </table>
+    <button>
+      <a href="#">Buy</a>
+    </button>
+    <button>
+      <a href="#">Cancel</a>
+    </button>
   </body>
 </html>
