Menambahkan marquee dan h1

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     />
   </head>
   <body>
+    <marquee direction="left"><h1>Tabel Peripheral</h1></marquee>
     <table>
       <tr>
         <th>No</th>
